--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -48,12 +48,18 @@ and the total residual error as,
 \end{equation}
 where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks \mr{with $\fnl=0$ that have had no mitigation applied to them}. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (red dashed curve), which is indicative of the psfsize-related systematics in the DESI LRG targets. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low end of depth$_{z}$ and around $1\%$ in the high end of psfsize$_{z}$, which implies the presence of non-linear systematic effects. We find that the imaging weights from the non-linear model trained with the three identified maps (or four maps including the stellar density) are capable of reducing the fluctuations below $2\%$. Even with the non-linear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
 
-\begin{figure}
-\raggedright
-\includegraphics[width=0.45\textwidth]{chi2test.pdf}
-\includegraphics[width=0.44\textwidth]{chi2test2.pdf}
-\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and non-linear treatments are represented via vertical lines, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.9$.}\label{fig:chi2test}
-\end{figure}
+%\begin{figure}
+% \raggedright
+% \includegraphics[width=0.45\textwidth]{chi2test.pdf}
+% \includegraphics[width=0.44\textwidth]{chi2test2.pdf}
+% \caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and non-linear treatments are represented via vertical lines, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.9$.}\label{fig:chi2test}
+% \end{figure}
+
+\begin{figure*}
+    \centering
+    \includegraphics[width=\textwidth]{figures/chi2_tests.pdf}
+    \caption{The remaining systematic error $\chi^{2}$ from the mean galaxy density contrast (left) and the galaxy-imaging cross power spectrum (right). The values observed in the DESI LRG targets after the non-linear treatments are represented via vertical lines using the $\fnl=0$ (solid) or $76.9$ (dashed) covariance, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ (solid) and $76.9$ (dashed).}\label{fig:chi2test}
+\end{figure*}
 
 Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the normalized cross spectrum (top) and mean density contrast (bottom) statistics obtained from lognormal mocks with different $\fnl$ values. \mout{The $\chi^{2}$ tests are insensitive to $\fnl$, providing consistent distributions regardless of its value that was used for mock generation, and thus these tests help separate systematics from cosmology.} No mitigation is applied to the mocks, ensuring unbiased $\chi^{2}$ values. DESI LRG target $\chi^{2}$ values are compared via the vertical lines and summarized in Table \ref{tab:chi2test}. After cleaning, the cross power spectrum's $\chi^{2}$ is reduced. However, linear three maps approach fails to clean the data properly at $95\%$ confidence ($\chi^{2}=195.9$ and $p$-value $< 0.04$). Alternative non-linear three maps approach reduces $\chi^{2}$ significantly with $p$-value $=0.59$, supporting the need for non-linear cleaning. For this test, we only use multipoles for up to $\ell=20$, and we find no remaining systematic errors by investigating at higher multipoles (see Appendix \ref{sec:scalesys}). We observe similar performance in the mean density test. The \textit{linear two maps} weights reduce the $\chi^{2}$ from $679.8$ to $178.8$, but significant systematics remain ($p$-value $<0.001$). Applying the linear three maps approach lowers the error to $\chi^{2}=130$, yet systematics remain significant ($p$-value $<0.001$). Cleaning with linear eight maps results in $\chi^{2}=90$ and $p$-value $=0.08$, but using too many imaging maps increases the risk of removing the true clustering signal. Alternatively, using imaging weights from the \textit{non-linear three maps} approach yields $\chi^{2}=74.3$ and $p$-value $=0.39$. Adding the stellar density map (\textit{non-linear four maps}) slightly improves the results: $\chi^{2}=73.2$ and $p$-value $=0.42$. The small impact on $\chi^{2}$ suggests that the stellar density trend can be explained by extinction due to the correlation between these properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light. \mr{The non-linear method with nine maps is our most aggressive treatment which results in the lowest residual errors, $\chi^{2}=39.7$ ($p$-value = $>0.99$) and $49.1$ ($p$-value = $0.88$), respectively, for the mean density and cross-power spectrum statistics.}
 \begin{table}
@@ -77,15 +83,25 @@ Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the normalized cros
   \end{tabular}
 \end{table}
 
-The tests conducted here demonstrate the effectiveness of various cleaning approaches for the DESI LRG targets without revealing the measured power spectrum or $\fnl$ constraints. Results summarized in Table \ref{tab:chi2test} show that cleaning with non-linear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the non-linear three maps approach is optimal, as adding more imaging systematic maps may exacerbate over-correction issues. \mr{When we compare the mean density $\chi^{2}$ from the DESI LRG targets to the $\fnl=0$ mocks that have had the same imaging mitigation applied, we find that both nonlinear three and four maps have not entered the regime of over-correction. Whereas, nonlinear nine maps has reached the level of over-correction. This is illustrated in Figure \ref{fig:chi2scatter}.}
+
+\subsection{Scale dependent systematics}\label{sec:scalesys}
+Our fiducial cross power spectrum diagnostic (equation \ref{eq:cx_chi2}) uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. To investigate the statistical significance of the cross power spectrum's $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. We extend $\ell_{\rm max}$ from $20$ to $100$, where the latter scale corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the cross power spectrum's $\chi^{2}$ from the clean $\fnl=0$ mocks as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The red circles and blue crosses show the $\chi^{2}$ values for the DESI LRG targets cleaned respectively with the linear and neural network approaches, both with three maps. Overall, we find that for all scales up to $\ell=100$, the nonlinear three maps approach yields consistent values with the clean mocks, whereas the linear three maps approach exhibits significant remaining systematics at more than 95\% confidence.
 
 \begin{figure}
-\includegraphics[width=0.5\textwidth]{chi2_scatter.pdf}
-\caption{\mr{The remaining systematic error $\chi^{2}$ from the mean galaxy density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three (orange), four (purple), and nine maps (pink) cleaning methods. The faded orange squares represent the values observed in the $\fnl=76.9$ mocks after nonlinear three maps. The values observed in the DESI LRG targets after the same treatments are shown with solid lines.}}\label{fig:chi2scatter}
+\centering
+\includegraphics[width=0.5\textwidth]{chi2lmax.pdf}
+\caption{The cross power spectrum's $\chi^{2}$ between the DESI LRG target density and imaging systematic maps as a function of the highest mode $\ell_{\rm max}$ when the sample is cleaned with the linear (triangles) and non-linear (squares) three maps. The lowest mode is fixed at $\ell_{\rm min}=2$. The solid curve and dark (light) shade represent the median value and $68\%$ ($95\%$) confidence regions, estimated from the $\fnl=0$ mocks.}\label{fig:chi2cellextend}
 \end{figure}
 
+The tests conducted here demonstrate the effectiveness of various cleaning approaches for the DESI LRG targets without revealing the measured power spectrum or $\fnl$ constraints. Results summarized in Table \ref{tab:chi2test} show that cleaning with non-linear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the non-linear three maps approach is optimal, as adding more imaging systematic maps may exacerbate over-correction issues. \mr{When we compare the mean density $\chi^{2}$ from the DESI LRG targets to the $\fnl=0$ mocks that have had the same imaging mitigation applied, we find that both nonlinear three and four maps have not entered the regime of over-correction. Whereas, nonlinear nine maps has reached the level of over-correction. This is illustrated in Figure \ref{fig:chi2scatter}.}
 
-\mr{Figure \ref{fig:chi2scatter} illustrates the remaining systematic error $\chi^{2}$ from the mean density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three, four, and nine maps cleaning methods. The values for the $\fnl=76.9$ mocks are shown for nonlinear three maps only. The values observed in the DESI LRG targets after the same treatments are shown with solid lines. Note that the covariance matrices for the mean density and cross power spectrum are based on the $\fnl=0$ mocks. As a result, we find that the $\chi^{2}$ values for the $\fnl=76.9$ mocks are significantly larger than that of the $\fnl=0$ realizations. Therefore, these $\chi^{2}$ tests will have a preference for correction until excess power is removed, or equivalently, $\fnl=0$ is recovered even if the underlying $\fnl$ of the Universe is non-zero. We also find that the differences are resilient against log transformation, and we cannot make the $\chi^{2}$ tests insensitive to the $\fnl$ value that is used in the mocks.} 
+% \begin{figure}
+% \includegraphics[width=0.5\textwidth]{chi2_scatter.pdf}
+% \caption{\mr{The remaining systematic error $\chi^{2}$ from the mean galaxy density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three (orange), four (purple), and nine maps (pink) cleaning methods. The faded orange squares represent the values observed in the $\fnl=76.9$ mocks after nonlinear three maps. The values observed in the DESI LRG targets after the same treatments are shown with solid lines.}}\label{fig:chi2scatter}
+% \end{figure}
+
+
+% \mr{Figure \ref{fig:chi2scatter} illustrates the remaining systematic error $\chi^{2}$ from the mean density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three, four, and nine maps cleaning methods. The values for the $\fnl=76.9$ mocks are shown for nonlinear three maps only. The values observed in the DESI LRG targets after the same treatments are shown with solid lines. Note that the covariance matrices for the mean density and cross power spectrum are based on the $\fnl=0$ mocks. As a result, we find that the $\chi^{2}$ values for the $\fnl=76.9$ mocks are significantly larger than that of the $\fnl=0$ realizations. Therefore, these $\chi^{2}$ tests will have a preference for correction until excess power is removed, or equivalently, $\fnl=0$ is recovered even if the underlying $\fnl$ of the Universe is non-zero. We also find that the differences are resilient against log transformation, and we cannot make the $\chi^{2}$ tests insensitive to the $\fnl$ value that is used in the mocks.} 
 
 \mr{As shown in Figure \ref{fig:contmcmc}, we are able to recover the true $\fnl$ using the coefficients derived in Table \ref{ssec:calibration}. The associated drawback is that statistical precision will be diminished due to the large-scale clustering information being removed by mitigating with more maps than necessary. Our work motivates better diagnostics for the characterization of systematic error, such that it robustly differentiates large-scale excess power due to imaging systematics from that of non-zero local PNG.}
 
@@ -111,16 +127,6 @@ M_{\ell \ell^{\prime}} = \frac{2\ell^{\prime}+1}{4\pi} \sum_{\ell^{\prime\prime}
     \caption{\mr{The model power spectrum before and after the survey geometry convolution for $\fnl=0$ and $76.9$ using the DESI survey mask. The bottom panel shows the residual error with respect to the \textsc{NaMaster} code. The shade represents the dispersion of the $\fnl=76.9$ mocks.}}
     \label{fig:window_conv}
 \end{figure}
-
-\subsection{Scale dependent systematics}\label{sec:scalesys}
-Our fiducial cross power spectrum diagnostic (equation \ref{eq:cx_chi2}) uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. To investigate the statistical significance of the cross power spectrum's $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. We extend $\ell_{\rm max}$ from $20$ to $100$, where the latter scale corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the cross power spectrum's $\chi^{2}$ from the clean $\fnl=0$ mocks as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The red circles and blue crosses show the $\chi^{2}$ values for the DESI LRG targets cleaned respectively with the linear and neural network approaches, both with three maps. Overall, we find that for all scales up to $\ell=100$, the nonlinear three maps approach yields consistent values with the clean mocks, whereas the linear three maps approach exhibits significant remaining systematics at more than 95\% confidence.
-
-\begin{figure}
-\centering
-\includegraphics[width=0.5\textwidth]{chi2lmax.pdf}
-\caption{The cross power spectrum's $\chi^{2}$ between the DESI LRG target density and imaging systematic maps as a function of the highest mode $\ell_{\rm max}$ when the sample is cleaned with the linear (triangles) and non-linear (squares) three maps. The lowest mode is fixed at $\ell_{\rm min}=2$. The solid curve and dark (light) shade represent the median value and $68\%$ ($95\%$) confidence regions, estimated from the $\fnl=0$ mocks.}\label{fig:chi2cellextend}
-\end{figure}
-
 
 \subsection{Redshift uncertainties}\label{ssec:nzuncer}
 
