--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -2,7 +2,9 @@
 
 We have measured the local PNG parameter $\fnl$ using the scale-dependent bias in the angular clustering of LRGs selected from the DESI Legacy Imaging Survey DR9. Our sample includes more than $12$ million LRG targets covering around $14,000$ square degrees in the redshift range of $0.2< z < 1.35$. We leverage early spectroscopy during DESI Survey Validation \citep{desi2023sv} to infer the redshift distribution of our sample (Figure \ref{fig:nz}). \mr{Our power spectrum model accounts for various theoretical and observational effects such as RSD, magnification bias, survey geometry, and integral constraint. Most importantly, we utilize a novel machine learning-method to mitigate the effect of imaging systematics and reduce excess clustering power at low $\ell$.}
 
-In our fiducial analysis, \mr{which includes non-linear treatment using nine maps (Galactic extinction, stellar density, depth in $grzW1$, and psfsize in $grz$), we obtain $\fnl = 34^{+24(+50)}_{-44(-73)}$ with $p=1$ and $s=0.945$, which is consistent with recent CMB and LSS measurements, as visualized in Figure \ref{fig:fnlhist}. Our constraints are robust against $p$ and $s$ (Figure \ref{fig:fnl_magbias}). The signature of local PNG is very sensitive to excess clustering power caused by imaging systematic effects. We have applied a series of robustness tests to investigate the impact of how the galaxy selection function is determined. Specifically, both linear and nonlinear methods are applied using various combinations of imaging systematic maps (including two external maps for the neutral hydrogen column density and photometric calibration error in the z band). We also examine the effect of additional masks based on imaging properties and survey completeness. Overall, we find no change in the analysis that shifts the maximum likelihood value of $\fnl$ to a significantly different value (Figure \ref{fig:mcmc_dr9reg}, Figure \ref{fig:mcmc_dr9elmin}, and Table \ref{tab:dr9method}).}
+In our fiducial analysis, \mr{which includes non-linear treatment using nine maps (Galactic extinction, stellar density, depth in $grzW1$, and psfsize in $grz$), we obtain $\fnl = 34^{+24(+50)}_{-44(-73)}$ with $p=1$ and $s=0.945$. This measurement is consistent with recent CMB and LSS measurements, as visualized in Figure \ref{fig:fnlhist}. Our constraints are tested against $p$ and $s$ (Figure \ref{fig:fnl_magbias}). Specifically, we find that the error on $\fnl$ is more sensitive to $p$ than $s$. Compared with the fiducial result, the error increases by more than a factor of two for $p=1.6$, and only by $7\%$ for $s=1.25$. The minimum $\chi^{2}$ however does not change much, indicating that the impact on the power spectrum fit is negligible.} 
+
+\mr{The signature of local PNG is very sensitive to excess clustering power caused by imaging systematic effects. We have applied a series of robustness tests to investigate the impact of how the galaxy selection function is determined. Specifically, both linear and nonlinear methods are applied using various combinations of imaging systematic maps (including two external maps for the neutral hydrogen column density and photometric calibration error in the z band). We also examine the effect of additional masks based on imaging properties and survey completeness. Overall, we find no change in the analysis that shifts the maximum likelihood value of $\fnl$ to a significantly different value (Figure \ref{fig:mcmc_dr9reg}, Figure \ref{fig:mcmc_dr9elmin}, and Table \ref{tab:dr9method}).}
 
 \begin{figure}
     \centering
@@ -11,6 +13,8 @@ In our fiducial analysis, \mr{which includes non-linear treatment using nine map
     \label{fig:fnlhist}
 \end{figure}
 
-\mr{It is imperative to stress that the template-based approach, which is applied to the dataset to address large-scale excess clustering caused by imaging systematics, inevitably removes large-scale clustering information. Mitigating with more maps removes more of the power spectrum and biases the $\fnl$ posterior distribution. We can de-bias the constraints to increase the accuracy of our results, however the process degrades the precision on $\fnl$. We try regressions of systematics using a smaller set of maps as an attempt to avoid over-fitting the large-scale clustering signal. We utilize the mean galaxy density and cross correlations of the galaxy density field and imaging property maps to identify the least number of maps (Appendix \ref{sec:systests}).  Unfortunately, these tests depend on the $\fnl$ value used in the mocks, and therefore they reveal a preference for artificially diminishing the constraining power of the dataset, as we consistently remove excess clustering signal until $\fnl=0$ is recovered (for instance, if we consider the covariances constrcuted from the $\fnl=0$ mocks). While we can recover the removed signal and debias the $\fnl$ posterior after accounting for over-correction, we lose constraining power due to the removal of large-scale clustering information. Hence, there is a strong motivation for exploring alternative approaches that avoid over-correction and enhance the science yield of datasets in future studies of local primordial non-Gaussianity.}
+\mr{Although being essential for the mitigation of imaging systematics, the template-based approach inevitably removes some of the large-scale clustering information. One of the primary highlights of this work is that we present an strategy to calibrate the systematic mitigation's impact on the inferred $\fnl$. As we increase the number of maps for mitigation, more of the power spectrum is removed, introducing a larger bias to the $\fnl$ posterior distribution. Out mock test suggest that this bias is $\fnl$-dependent, meaning mocks with larger $\fnl$ experience a more substantial reduction in power due to systematic mitigation.}
 
-\mr{Galactic extinction, depth in z, and psfsize in r are identified as the primary sources of systematics. The non-linear method with three maps is able to mitigate most of the trends against all available templates, but it yields an $\fnl$ result that is highly degenerate with unforeseen excess power on large scales. In spite of the fact that the nonlinear three maps does not pass our validation tests, however, we find that the constraining power is almost twice stronger than that of the nonlinear nine maps. This results motivates that finding an optimal set of imaging property maps can avoid erasing large-scale clustering information and enhanace the precision of the analysis.} Our analysis can be considered as the first attempt to identify major systematics in DESI, so we can be ready for constraining $\fnl$ with DESI spectroscopy. Internal DESI tests of the photometric calibration were unable to uncover DESI-specific issues, e.g., when comparing to Gaia data. The most significant trends that we find are with the E(B-V) map. The source of such a trend would be a mis-calibration of the E(B-V) map itself or the coefficients applied to obtain Galactic extinction corrected photometry. Such a mis-calibration would plausibly be proportional in amplitude to the estimated E(B-V) map, though it may not have E(B-V)’s spatial distribution. In order to explain the $\fnl$ signal we measure using nonlinear three maps, such an effect would need to be approximately twice that of the trend we find with E(B-V). There are ongoing efforts within DESI to obtain improved Galactic extinction information, which will help establish if this is indeed the cause. \mr{Additionally, cross-correlations of the DESI LRG density with the CMB lensing map is more stable in terms of systematics and can complement analyses based on galaxy-galaxy clustering. We can further improve the estimation of the galaxy survey selection function by combining our neural network-based method with forward-modeling techniques, such as Obiwon \citep{kong2020}, but we will leave that for future work.} 
+\mr{We demonstrate the possibility of recovering the true $\fnl$ value, but at the cost of a more than two-fold increase in the error for our fiducial imaging systematic treatment approach, which incorporates all imaging systematic maps. To retain some constraining power, we conduct regressions using a smaller set of maps, including Galactic extinction, depth in the z band, and astronomical seeing in the r band (nonlinear three maps). Additionally, we consider an additional map for local stellar density (nonlinear four maps). Using three or four maps, we can qualitatively mitigate systematic trends in the mean galaxy density and cross correlations of the galaxy density field and imaging property maps (see Appendix \ref{sec:systests}). However, a quantitative assessment of these systematic errors depends on covariance matrices and, notably, the $\fnl$ value used for creating the mocks. Therefore, our findings underscore the importance of exploring, developing, and validating alternative mitigation approaches to avoid over-correction for a robust analysis of local PNG.}
+
+Our analysis can be considered as the first attempt to identify major systematics in DESI, so we can be ready for constraining $\fnl$ with DESI spectroscopy. Internal DESI tests of the photometric calibration were unable to uncover DESI-specific issues, e.g., when comparing to Gaia data. The most significant trends that we find are with the E(B-V) map. The source of such a trend would be a mis-calibration of the E(B-V) map itself or the coefficients applied to obtain Galactic extinction corrected photometry. Such a mis-calibration would plausibly be proportional in amplitude to the estimated E(B-V) map, though it may not have E(B-V)’s spatial distribution. In order to explain the $\fnl$ signal we measure using nonlinear three maps, such an effect would need to be approximately twice that of the trend we find with E(B-V). There are ongoing efforts within DESI to obtain improved Galactic extinction information, which will help establish if this is indeed the cause. \mr{Additionally, cross-correlations of the DESI LRG density with the CMB lensing map is more stable in terms of systematics and can complement analyses based on galaxy-galaxy clustering. We can further improve the estimation of the galaxy survey selection function by combining our neural network-based method with forward-modeling techniques, such as Obiwon \citep{kong2020}, but we will leave that for future work.} 
