Updates from Overleaf

--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -2,9 +2,9 @@
 
 We have measured the local PNG parameter $\fnl$ using the scale-dependent bias in the angular clustering of LRGs selected from the DESI Legacy Imaging Survey DR9. Our sample includes more than $12$ million LRG targets covering around $14,000$ square degrees in the redshift range of $0.2< z < 1.35$. We leverage early spectroscopy during DESI Survey Validation \citep{desi2023sv} to infer the redshift distribution of our sample (Figure \ref{fig:nz}). \mr{Our power spectrum model accounts for various theoretical and observational effects such as RSD, magnification bias, survey geometry, and integral constraint. Most importantly, we utilize a novel machine learning-method to mitigate the effect of imaging systematics and reduce excess clustering power at low $\ell$.}
 
-In our fiducial analysis, \mr{which includes non-linear treatment using nine maps (Galactic extinction, stellar density, depth in $grzW1$, and psfsize in $grz$), we obtain $\fnl = 34^{+24(+50)}_{-44(-73)}$ with $p=1$ and $s=0.945$. This measurement is consistent with recent CMB and LSS measurements, as visualized in Figure \ref{fig:fnlhist}. Our constraints are tested against $p$ and $s$ (Figure \ref{fig:fnl_magbias}). Specifically, we find that the error on $\fnl$ is more sensitive to $p$ than $s$. Compared with the fiducial result, the error increases by more than a factor of two for $p=1.6$, and only by $7\%$ for $s=1.25$. The minimum $\chi^{2}$ however does not change much, indicating that the impact on the power spectrum fit is negligible.} 
+In our fiducial analysis, \mr{which includes non-linear treatment of systematics using nine imaging property maps (Galactic extinction, stellar density, depth in $grzW1$, and psfsize in $grz$), we obtain $\fnl = 34^{+24(+50)}_{-44(-73)}$ with $p=1$ and $s=0.945$. This measurement is consistent with recent CMB and LSS measurements, as visualized in Figure \ref{fig:fnlhist}. The sensitivity of our constraints is explored against $p$ and $s$. Specifically, we find that the error on $\fnl$ is more sensitive to $p$ than $s$. Compared with the fiducial result, the error increases by more than a factor of two for $p=1.6$, and only by $7\%$ for $s=1.25$ (Figure \ref{fig:fnl_magbias}). The minimum $\chi^{2}$ however does not change much, indicating that the impact on the power spectrum fit is negligible.} 
 
-\mr{The signature of local PNG is very sensitive to excess clustering power caused by imaging systematic effects. We have applied a series of robustness tests to investigate the impact of how the galaxy selection function is determined. Specifically, both linear and nonlinear methods are applied using various combinations of imaging systematic maps (including two external maps for the neutral hydrogen column density and photometric calibration error in the z band). We also examine the effect of additional masks based on imaging properties and survey completeness. Overall, we find no change in the analysis that shifts the maximum likelihood value of $\fnl$ to a significantly different value (Figure \ref{fig:mcmc_dr9reg}, Figure \ref{fig:mcmc_dr9elmin}, and Table \ref{tab:dr9method}).}
+\mr{The signature of local PNG is very sensitive to excess clustering power caused by imaging systematic effects. We have applied a series of robustness tests to investigate the impact of how the galaxy selection function is determined. Specifically, both linear and nonlinear methods are applied using various combinations of imaging systematic maps (including two external maps for the neutral hydrogen column density and photometric calibration error in the z band). We also examine the effect of additional masks based on imaging conditions and survey completeness. Overall, we find no change in the analysis that shifts the maximum likelihood value of $\fnl$ to a significantly different value (Figure \ref{fig:mcmc_dr9reg}, Figure \ref{fig:mcmc_dr9elmin}, and Table \ref{tab:dr9method}).}
 
 \begin{figure}
     \centering
