--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -26,9 +26,9 @@ With this normalization, $\tilde{C}_{x_{i}, \ell}$ estimates the contribution of
 \begin{equation}\label{eq:cx_chi2}
 \chi^{2} = \tilde{C}^{T}_{X, \ell} \mathbb{C}_{X}^{-1} \tilde{C}_{X, \ell},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks \mr{with $\fnl=0$}. These $\chi^{2}$ values are measured for every clean mock realization with the \textit{leave-one-out} technique and compared to the values observed in the DESI LRG targets with various imaging systematic corrections. Specifically, we use 999 realizations to estimate a covariance matrix and then apply the covariance matrix from the 999 realizations to measure the $\chi^{2}$ for the one remaining realization. This process is repeated for all 1000 realizations to construct a histogram for $\chi^{2}$. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, which results in a total of 81 bins, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
+where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks. \mr{We consider both sets with $\fnl=0$ and $76.9$}. These $\chi^{2}$ values are measured for every clean mock realization with the \textit{leave-one-out} technique and compared to the values observed in the DESI LRG targets with various imaging systematic corrections. Specifically, we use 999 realizations to estimate a covariance matrix and then apply the covariance matrix from the 999 realizations to measure the $\chi^{2}$ for the one remaining realization. This process is repeated for all 1000 realizations to construct a histogram for $\chi^{2}$. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, which results in a total of 81 bins, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
 
-Figure \ref{fig:clxmock} shows $\tilde{C}_{X,\ell}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the DESI LRG targets have the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There are less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the DESI LRG targets with the linear model using two maps (extinction and depth in z) as identified from the Pearson correlation. Linear two maps is the most conservative systematic treatment method in terms of both the model flexibility and the number of input maps. With linear two maps (red dashed curve), most of the cross correlation signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross correlations against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. 
+Figure \ref{fig:clxmock} shows $\tilde{C}_{X,\ell}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively\mr{, that have had no mitigation applied to them}. Without imaging weights, the DESI LRG targets have the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There are less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the DESI LRG targets with the linear model using two maps (extinction and depth in z) as identified from the Pearson correlation. Linear two maps is the most conservative systematic treatment method in terms of both the model flexibility and the number of input maps. With linear two maps (red dashed curve), most of the cross correlation signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross correlations against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. 
 
 Regression against extinction and depth in the z-band helps mitigate large-scale cross correlations ($\ell < 6$), but there are some residual power on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (blue dot-dashed curve) approach alleviates the cross correlation against psfsize in r, and it yields similar results to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps using the linear approach. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects. Compared with the linear three maps method, we find that non-linear three maps (green dashed curve) can reduce the cross correlations against both the r and z-band psfsize maps, which shows the benefit of using a non-linear approach. To further examine the robustness of our cleaning methods, we also show the cross correlations after cleaning the DESI LRG targets with linear eight maps (orange dotted curve) and non-linear four maps (pink dot-dashed curve). 
 
@@ -46,7 +46,7 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks \mr{with $\fnl=0$ that have had no mitigation applied to them}. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (red dashed curve), which is indicative of the psfsize-related systematics in the DESI LRG targets. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low end of depth$_{z}$ and around $1\%$ in the high end of psfsize$_{z}$, which implies the presence of non-linear systematic effects. We find that the imaging weights from the non-linear model trained with the three identified maps (or four maps including the stellar density) are capable of reducing the fluctuations below $2\%$. Even with the non-linear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (red dashed curve), which is indicative of the psfsize-related systematics in the DESI LRG targets. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low end of depth$_{z}$ and around $1\%$ in the high end of psfsize$_{z}$, which implies the presence of non-linear systematic effects. We find that the imaging weights from the non-linear model trained with the three identified maps (or four maps including the stellar density) are capable of reducing the fluctuations below $2\%$. Even with the non-linear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
 
 %\begin{figure}
 % \raggedright
@@ -62,6 +62,27 @@ where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is 
 \end{figure*}
 
 Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the normalized cross spectrum (top) and mean density contrast (bottom) statistics obtained from lognormal mocks with different $\fnl$ values. \mout{The $\chi^{2}$ tests are insensitive to $\fnl$, providing consistent distributions regardless of its value that was used for mock generation, and thus these tests help separate systematics from cosmology.} No mitigation is applied to the mocks, ensuring unbiased $\chi^{2}$ values. DESI LRG target $\chi^{2}$ values are compared via the vertical lines and summarized in Table \ref{tab:chi2test}. After cleaning, the cross power spectrum's $\chi^{2}$ is reduced. However, linear three maps approach fails to clean the data properly at $95\%$ confidence ($\chi^{2}=195.9$ and $p$-value $< 0.04$). Alternative non-linear three maps approach reduces $\chi^{2}$ significantly with $p$-value $=0.59$, supporting the need for non-linear cleaning. For this test, we only use multipoles for up to $\ell=20$, and we find no remaining systematic errors by investigating at higher multipoles (see Appendix \ref{sec:scalesys}). We observe similar performance in the mean density test. The \textit{linear two maps} weights reduce the $\chi^{2}$ from $679.8$ to $178.8$, but significant systematics remain ($p$-value $<0.001$). Applying the linear three maps approach lowers the error to $\chi^{2}=130$, yet systematics remain significant ($p$-value $<0.001$). Cleaning with linear eight maps results in $\chi^{2}=90$ and $p$-value $=0.08$, but using too many imaging maps increases the risk of removing the true clustering signal. Alternatively, using imaging weights from the \textit{non-linear three maps} approach yields $\chi^{2}=74.3$ and $p$-value $=0.39$. Adding the stellar density map (\textit{non-linear four maps}) slightly improves the results: $\chi^{2}=73.2$ and $p$-value $=0.42$. The small impact on $\chi^{2}$ suggests that the stellar density trend can be explained by extinction due to the correlation between these properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light. \mr{The non-linear method with nine maps is our most aggressive treatment which results in the lowest residual errors, $\chi^{2}=39.7$ ($p$-value = $>0.99$) and $49.1$ ($p$-value = $0.88$), respectively, for the mean density and cross-power spectrum statistics.}
+
+\begin{table*}
+  \caption{Mean density and cross power spectrum $\chi^{2}$ and $p$-values that are inferred from the comparison to the $\fnl=0$ and $76.9$ clean mocks \mr{that have had the same mitigation applied to them. For the case of No Weight, we use the clean mocks without mitigation}.}\label{tab:chi2test}
+  \begin{tabular}{lcccc|cccc}
+    \hline
+    \hline
+    \multirow{3}{*}{\textbf{Method}} &&
+      \multicolumn{2}{c}{\textbf{Mean Density (dof=72)}} & & &
+      \multicolumn{2}{c}{\textbf{Cross Spectrum (dof=81)}} \\
+    & \multicolumn{2}{c}{$\fnl$=0} & \multicolumn{2}{c}{$\fnl$=76.9} & \multicolumn{2}{c}{$\fnl$=0} & \multicolumn{2}{c}{$\fnl$=76.9} \\
+    & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value \\
+    \hline
+No Weight & 679.8 & < 0.001 & 20014.8 & < 0.001 & 405.2 & < 0.001 & 721.1 & < 0.001 \\
+Nonlinear Three Maps & 119.5 & 0.002 & 118.6 & 0.273 & 109.7 & 0.003 & 38.0 & 0.951 \\
+Nonlinear Four Maps & 118.2 & 0.001 & 124.6 & 0.240 & 115.9 & 0.001 & 43.3 & 0.921 \\
+Nonlinear Nine Maps & 71.9 & 0.487 & 195.1 & 0.047 & 74.9 & 0.392 & 62.2 & 0.767 \\
+    \hline
+  \end{tabular}
+\end{table*}
+
+
 \begin{table}
   \caption{Mean density and cross power spectrum $\chi^{2}$ and $p$-values that are inferred from the comparison to the $\fnl=0$ clean mocks \mr{that have had no mitigation applied to them}. \mc{remake this table by comparing the chi2 to the mock chi2 distribution that have had the same treatment, similar to Figure A4. Use this table in the main text and make sure we discuss the fNL dependence in Appendix.}}\label{tab:chi2test}
   \begin{tabular}{lcccc}
@@ -72,6 +93,7 @@ Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the normalized cros
       \multicolumn{2}{c}{\textbf{Cross Spectrum}} \\
     & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value \\
     \hline
+    
    No Weight & 679.8 & < 0.001 & 20014.8 & < 0.001 \\
    Linear Two Maps & 178.8 & < 0.001 & 375.1 & < 0.001 \\
    Linear Three Maps & 130 & < 0.001  & 195.9 & 0.04 \\
